{
    "name": "Controls",
    "maps": [
        {
            "name": "Raffle",
            "id": "28e4acb8-62f2-46a3-8cf1-e7bd940b5ceb",
            "actions": [
                {
                    "name": "EnterRaffle",
                    "type": "Button",
                    "id": "90560bc7-d9e5-489f-88b5-aca44fa93524",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger1",
                    "type": "Button",
                    "id": "4a56e5be-038d-49bb-903e-5018d21f2290",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger2",
                    "type": "Button",
                    "id": "2cee7eea-7af9-437e-a1bc-43eeadab0b2d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger3",
                    "type": "Button",
                    "id": "c4e0e362-f91d-4c26-b6df-8cf3e493eebc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger4",
                    "type": "Button",
                    "id": "54174973-0ff8-40a3-b189-f07e52445c9a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger5",
                    "type": "Button",
                    "id": "ddbdc04b-977f-4a6c-8513-c5fad129acb6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger6",
                    "type": "Button",
                    "id": "daa65e3e-3525-4722-aee1-6489fb99c9bd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger7",
                    "type": "Button",
                    "id": "0f4554bc-f49c-4f0d-a8df-8fd6045d12f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger8",
                    "type": "Button",
                    "id": "18bb7771-7849-4f2a-90b5-5f7aa46f576b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger9",
                    "type": "Button",
                    "id": "15367b70-570d-49f5-ad83-722911fa027e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hunger10",
                    "type": "Button",
                    "id": "c4154a3c-1727-4efa-81f3-1b0d49b65bf4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddHunger",
                    "type": "Button",
                    "id": "5ca4e604-a58d-40cf-8224-195bda061d5d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitRaffle",
                    "type": "Button",
                    "id": "70c30e19-4542-47db-bff2-a7d0ce8a75d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ab602b8-3197-41b9-83ac-e406b62de275",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterRaffle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0694855e-8651-4dce-8d98-4cfec9244098",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterRaffle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5097bef7-3ea9-4425-826a-ce95826ae6b6",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterRaffle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "083c2ede-7d08-4237-b823-fbdc23916f07",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "976c9ffe-1785-4bc1-beb6-da15841f4120",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c946b27-9d35-42c7-8ddb-d0565aacd363",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d77722bd-2a5c-4484-a720-e6e463a18057",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "763f08bc-c7fd-4973-9b81-74d02ca6a646",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90020ff7-8538-4b42-8098-d339b0fb81d4",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07df1217-526e-47de-81e4-d81723207d91",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "483e2a45-31d9-414e-aedc-6f0499b3b5c4",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6330a6e3-ed19-40ec-8f3a-37c219506127",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7134552f-e22b-4781-99ce-b8c7f41f5b01",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hunger10",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73208f5a-74ae-4343-a151-f7a7f7397233",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddHunger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5720d0e0-3a00-440c-9c8f-cfdf1eda9037",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitRaffle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "General",
            "id": "55852fc3-e989-40e1-a374-284a274647c1",
            "actions": [
                {
                    "name": "ToggleMoon",
                    "type": "Button",
                    "id": "8c33a718-a218-4ecd-9434-02202c0baa3a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Two Modifiers",
                    "id": "d3652364-6a6a-4b2c-9faf-19b2593f912b",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMoon",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "d2f2b3bc-eb71-4a3a-b76c-3c9037c8c24a",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMoon",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "89411d21-44fa-41d3-8bf4-973c24adcf56",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMoon",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "df71915e-6cc1-43f7-b750-a25e5eb09059",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMoon",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}